--- a/README
+++ b/README
@@ -1,2 +1,3 @@
-This is my personal projects. Stuff that shouldn't live in ../work, basically. Same
+This is my personal projects. Stuff that shouldn't really live in ../work, basically. Same
 rules apply - if there's a better way of doing something, please tell me! :)
+
